new helmet texture

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -34,7 +34,7 @@ body.home
 								+icon("rarr")
 		section.mission-section
 			.container
-				h1 The Open Brain Project is a collaborative effort among scientists and clinicians to support basic discoveries of brain function that advance patient care and provide a platform for community education and outreach.			
+				p The Open Brain Project is a collaborative effort among scientists and clinicians to support basic discoveries of brain function that advance patient care and provide a platform for community education and outreach.			
 		section.focus-area-section
 			.container
 				h1 Our Focus Areas
