--- a/src/jade/tbi/index.jade
+++ b/src/jade/tbi/index.jade
@@ -33,9 +33,8 @@ body.tbi
 					li.data-set.container(class=dataset.class_name)
 						h3.data-set-title= dataset.name
 						button.data-set-run(type="button", onclick=dataset.key) Run
-
-		.container
-			p If you have data from a helmet worn accelerometer that you would like to contribute to the Open Brain Project, please sign up below for instructions on how to upload your data.
+		// .container
+			// p If you have data from a helmet worn accelerometer that you would like to contribute to the Open Brain Project, please sign up below for instructions on how to upload your data.
 	+footer()
 
 script(src="../js/three.min.js")
