--- a/src/jade/translate/index.jade
+++ b/src/jade/translate/index.jade
@@ -10,22 +10,10 @@ body.discover
 	main
 		section.page-hero.blue-gradient
 			.container.split
-				h1 Translate
+				h2 Translate
 				p.stretch The Program for Translational Brain Mapping is focused on translating the latest discoveries about human brain function into opportunities to improve patient care.
-		section.news-section
+		section.translational-brain-mapping-section
 			.container
-				h2 News
-		section.news-section
-			.container
-				h2 Scientific Products
-		section.news-section
-			.container
-				h2 Resources for Scientists
-		section.data-sets-section
-			.container
-				h2 Data Sets
-	
+				a(href="https://www.urmc.rochester.edu/del-monte-neuroscience/translational-brain-mapping.aspx") Program for Translational Brain Mapping
+				
 	+footer()
-			
-
-
