--- a/src/jade/partials/_header.jade
+++ b/src/jade/partials/_header.jade
@@ -9,9 +9,9 @@ mixin header()
 					+icon("brain")
 					| The Open Brain Project
 			.right-header-content
-				a(href="https://twitter.com").social-link
+				a.header-social-link(href="https://twitter.com")
 					+icon("twitter")
-				a(href="https://facebook.com").social-link
+				a.header-social-link(href="https://facebook.com")
 					+icon("facebook")
 				button.nav-toggle(onClick="toggleNav()")
 					span Menu
