--- a/src/jade/partials/_footer.jade
+++ b/src/jade/partials/_footer.jade
@@ -3,6 +3,5 @@ include ./_svg
 mixin footer()
 	footer
 		.container
-			.copyright 
-				| &copy; 2019 Brad Mahon of BrainSurvey, LLC
+			.copyright &copy; 2019 Brad Mahon of BrainSurvey, LLC
 	+svg()
