--- a/src/jade/partials/_toggle.jade
+++ b/src/jade/partials/_toggle.jade
@@ -1,5 +1,5 @@
 mixin toggle(className, labelName)
-	label.box.box-toggle.container(class=className)
+	label.bs-box.bs-box-toggle(class=className)
 		h3= labelName
 		input(type="checkbox", tabindex="0")
-		.toggle
+		.bs-toggle
