--- a/src/jade/tbi/index.jade
+++ b/src/jade/tbi/index.jade
@@ -8,7 +8,7 @@ include ../partials/_footer
 body.tbi
 	+header("tbi")
 	main
-		section
+		.page-title
 			.container
 				h1 Traumatic Brain Injury Explorer
 		section
