--- a/src/scss/partials/_brainsurvey.scss
+++ b/src/scss/partials/_brainsurvey.scss
@@ -1,5 +1,226 @@
-.brain-survey-embed {
+.bs-main {
 	width: 100%;
 	min-height: 100vh;
-	border: 0;
+	padding: 0;
+	background: $light_gray;
+	color: $black;
+
+	@media (min-width: $tablet) {
+		display: flex;
+		flex-direction: row-reverse;
+	}
+
+	h2,
+	h3 {
+		font-weight: normal;
+	}
+
+	h2 {
+		font-size: 1.25em;
+	}
+	h3 {
+		font-size: 1em;
+		margin: 0;
+	}
+
+	& + footer {
+		margin-top: 0;
+	}
+}
+
+.bs-main-wrapper {
+	position: relative;
+	width: 100%;
+	background-color: $black;
+
+	@media (min-width: $tablet) {
+		flex: 1;
+		width: calc(100% - var(--sidebar-width));
+	}
+}
+
+.bs-side-wrapper {
+	width: 100%;
+
+	@media (min-width: $tablet) {
+		width: var(--sidebar-width);
+	}
+
+	section {
+		padding: 0;
+	}
+
+	.container {
+		padding: var(--large);
+	}
+}
+
+.bs-box-wrapper {
+	position: relative;
+
+	& + & {
+		margin-top: var(--medium);
+	}
+
+	.box-link {
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+
+// Brain Wrapper =========================================================================
+.bs-brain-wrapper {
+	position: relative;
+	width: 100%;
+	height: 90vw;
+	overflow: hidden;
+	transition: transform var(--transition-decorative);
+
+	canvas {
+		position: relative;
+		z-index: 10;
+		cursor: move;
+		cursor: grab;
+		cursor: -moz-grab;
+		cursor: -webkit-grab;
+
+		&:active {
+			cursor: grabbing;
+			cursor: -moz-grabbing;
+			cursor: -webkit-grabbing;
+		}
+	}
+
+	@media (min-width: $tablet) {
+		height: 100vh;
+		transform-origin: center top;
+		transform: scale3d(1, 1, 1);
+	}
+
+	@media (min-width: $desktop) {
+		position: fixed;
+		width: calc(100% - var(--sidebar-width));
+		right: 0;
+		top: 0;
+		bottom: 0;
+		z-index: 10;
+		transform-origin: center;
+	}
+
+	// // Crosshairs
+	// &:before,
+	// &:after {
+	// 	display: block;
+	// 	position: absolute;
+	// 	content: "";
+	// 	z-index: 1000;
+	// 	background: blue;
+	// }
+
+	// &:before {
+	// 	left: 0;
+	// 	right: 0;
+	// 	top: calc(50% - 1px);
+	// 	height: 2px;
+	// }
+
+	// &:after {
+	// 	top: 0;
+	// 	bottom: 0;
+	// 	left: calc(50% - 1px);
+	// 	width: 2px;
+	// }
+}
+
+// Regions search ========================================================================
+.bs-regions-wrapper {
+	background: $light_gray;
+}
+
+.bs-regions-search {
+	@include shadow($light_gray, 1em);
+
+	background: $white;
+	padding: var(--medium) var(--large);
+	width: 100%;
+}
+
+// Toggles ===============================================================================
+.bs-box-toggle {
+	@extend %no-select;
+	@include shadow($light_gray, 1em);
+
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	cursor: pointer;
+	background: $white;
+	color: $black;
+	padding: var(--medium) var(--large);
+	border-bottom: thin solid $light_gray;
+
+	&:first-child {
+		border-top-left-radius: var(--radius);
+		border-top-right-radius: var(--radius);
+	}
+
+	&:last-child {
+		border-bottom-left-radius: var(--radius);
+		border-bottom-right-radius: var(--radius);
+		border: 0;
+	}
+
+	input[type="checkbox"] {
+		position: absolute;
+		top: 0;
+		left: 0;
+		opacity: 0;
+		pointer-events: none;
+
+		&:checked + .bs-toggle {
+			background: tint($blue, 50%);
+
+			&:before {
+				transform: translate3d(100%, 0, 0) scale3d(1.15, 1.15, 1.15);
+				background: $blue;
+			}
+		}
+
+		&:focus + .bs-toggle {
+			outline: 3px blue;
+			outline: -webkit-focus-ring-color auto 5px;
+		}
+	}
+
+	&:active {
+		transform: scale(1.02, 1.02, 1.02);
+	}
+}
+
+.bs-toggle {
+	$size: 1.5rem;
+
+	width: $size * 2;
+	height: $size;
+	margin-left: var(--medium);
+	background: $gray-800;
+	border-radius: $size;
+	transition: background var(--transition);
+	opacity: 0.75;
+
+	&:hover {
+		opacity: 1;
+	}
+
+	&:before {
+		@extend %psuedo;
+		width: $size;
+		height: $size;
+		background: $gray-500;
+		border-radius: $size;
+		transition: transform var(--transition), background var(--transition);
+		transform: scale3d(1.15, 1.15, 1.15);
+	}
 }
