--- a/src/jade/partials/_nav.jade
+++ b/src/jade/partials/_nav.jade
@@ -18,6 +18,9 @@ mixin nav()
 			ul.educate-nav
 				li
 					a(href="/educate") Educate
+					ul
+						li
+							a(href="/brainsurvey") Brain Survey
 			ul.translate-nav
 				li
 					a(href="/translate") Translate
