--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,7 +31,7 @@
 $white: #ffffff;
 $black: #16161d;
 $light_black: tint($black, 10%);
-$light_gray: rgba(mix($black, $white), 0.2);
+$light_gray: rgba(mix($black, $white), 0.25);
 $light_white: rgba($white, 0.1);
 
 $blue: #147ace;
@@ -51,16 +51,6 @@ $gray-900: mix($white, $black, 90%);
 $mobile: 20rem;
 $tablet: 40rem;
 $desktop: 60rem;
-
-$inferno-array: #000004, #160b39, #420a68, #6a176e, #932667, #ba3655, #dd513a,
-	#f3761b, #fca50a, #f6d746, #f6d746;
-$rainbow-array: #6e40aa, #be3caf, #fe4b83, #ff7747, #e3b62f, #b0ef5a, #53f666,
-	#1edfa2, #23acd8, #4c6fdc, #4c6fdc;
-
-$spectral-array: #9e0142, #d13b4b, #f0704a, #fcab63, #fedc8c, #fbf8b0, #e0f3a1,
-	#aadda2, #69bda9, #4288b5, #4288b5;
-
-$color-array: $spectral-array;
 
 :root {
 	--root-size: 90%;
@@ -89,16 +79,16 @@ $color-array: $spectral-array;
 	}
 
 	@media (prefers-reduced-motion: reduce) {
-		--transition-decorative: 0s;
 		--transition: 0s;
 		--transition-hover: 0s;
+		--transition-decorative: 0s;
 	}
 }
 
 // Base Styles ===========================================================================
 body {
 	font-size: var(--root-size);
-	font-family: Source Sans Pro, Helvetica Neue, Helvetica, sans-serif;
+	font-family: Helvetica Neue, Helvetica, sans-serif;
 	line-height: 1.5;
 	color: $black;
 	background: $white;
@@ -131,6 +121,7 @@ section {
 }
 
 .page-title {
+	padding: var(--small) 0;
 	border-bottom: thin solid $light_gray;
 }
 
