--- a/src/jade/brainsurvey/index.jade
+++ b/src/jade/brainsurvey/index.jade
@@ -14,7 +14,7 @@ body.brainsurvey
 	.page-title
 		.container
 			h1 Brain Survey
-	section.bs-main
+	.bs-main
 		.bs-main-wrapper
 			// +slice_tool()
 			.bs-brain-wrapper
