--- a/src/jade/discover/index.jade
+++ b/src/jade/discover/index.jade
@@ -4,47 +4,17 @@ include ../partials/_svg
 include ../partials/_icon
 include ../partials/_footer
 
-+head("Discover | The Open Brain Project", "Integrating knowledge from the cognitive and brain sciences to open new frontiers in understanding human brain structure and function.")
++head("Discover | The Open Brain Project", "Opening new frontiers in understanding human brain structure and function.")
 body.discover
 	+header()
 	main
 		section.page-hero.orange-gradient
-			.container.split
+			.container
 				h1 Discover
-				p.stretch Integrating knowledge from the cognitive and brain sciences to open new frontiers in understanding human brain structure and function.
-		section#news.news-section
+				p Opening new frontiers in understanding human brain structure and function.
+		section#research-articles.research-articles-section
 			.container
-				h2 News
-				h3 New Research
-				:markdown
-					* [URMC: New Study Reshapes Understanding of How the Brain Recovers from Injury](https://www.urmc.rochester.edu/news/story/5519/new-study-reshapes-understanding-of-how-the-brain-recovers-from-injury.aspx)
-				h3 Preserving Dan's Music Abilities
-				p Learn about Dan, a musician and music teacher, who went through our the Translational Brain Mapping Program to remove his tumor while preserving his music abilities.
-				:markdown
-					* [URMC: A patient plays his saxophone during brain surgery](http://www.urmc.rochester.edu/neurosurgery/news.aspx?start=01-01-2017&amp;end=12-31-2017#newsItem2196)
-					* [NPR Health: This music teacher played his saxophone while in brain surgery](http://www.npr.org/sections/health-shots/2017/08/25/545710598/this-music-teacher-played-his-saxophone-while-in-brain-surgery)
-					* [Democrat and Chronicle: Still on operating table, patient plays sax to show surgery was success](http://www.democratandchronicle.com/story/news/2017/09/02/saxophone-solo-after-brain-surgery-signal-success-rochester/626876001/)
-					* [People Magazine: Music teacher played his sax during brain surgery after surgeons save his music function](http://people.com/bodies/music-teacher-plays-saxophone-during-brain-surgery/)
-					* [Facebook Seeker: This music teacher is undergoing brain surgery while playing the saxophone](http://www.facebook.com/SeekerMedia/videos/10155327361953387/)
-					* [NBC Health News: Musician plays sax during brain tumor surgery](http://www.nbcnews.com/health/health-news/musician-plays-sax-during-brain-tumor-surgery-n796971)
-					* [New Atlas: Mid-surgery sax solo sounds success for retaining musical ability](http://newatlas.com/patient-plays-saxophone-brain-surgery/51094/)
-				h3 Predicting Vision Recovery After Brain Tumor Removal
-				p Understanding vision's recovery process could have implications for many different injuries of the central nervous system.
-				:markdown
-					* [URMC: New imaging technique helps predict how vision recovers after brain tumor removal](http://www.rochester.edu/newscenter/myelin-linked-to-speedy-recovery-of-human-visual-system-after-tumor-removal-82512/)
-					* [Futurity: Images show how brain heals itself after tumor](http://www.futurity.org/pituitary-brain-tumor-vision-817882/)
-					* [WHEC News 10: Greece native defends thesis in cognitive neuroscience 12 years after aneurysm](http://www.whec.com/news/university-of-rochester-medical-center-student-research-scientist/4559749/)
-					* [URMC: Surviving a stroke propels career in brain research](https://www.urmc.rochester.edu/news/story/5107/surviving-a-stroke-propels-career-in-brain-research.aspx)
-					* [URMC: Student work opens the brain to help surgeons remove tumors](http://www.rochester.edu/newscenter/student-work-opens-brain-surgeons-remove-tumors-262152/)
-				h3 Resident and Former SMD Student Wins Cadbury Award
-				p Neurosurgery Resident and Former SMD Student David Paul (M.D. ’16) Wins National Cadbury Award for Academic and Volunteer Achievements.
-				:markdown
-					* [Pilot research offers new insights about how the brain fixes itself](https://www.urmc.rochester.edu/news/story/4450/smd-student-david-paul-m.d.-16-wins-national-cadbury-award--for-academic-and-volunteer-achievements.aspx)
-
-
-		section#scientific-products.scientific-products-section
-			.container
-				h2 Scientific Products
+				h2 Research Articles
 				:markdown
 					* Schneider CL, Prentiss EK, Busza A, Matmati K, Matmati N, Williams ZR, Sahin B, Mahon BZ. 2019 Survival of retinal ganglion cells after damage to the occipital lobe in humans is activity dependent. *Proc. R. Soc. B 286: 20182733.*[[pdf]](https://urldefense.proofpoint.com/v2/url?u=https-3A__www.cmu.edu_dietrich_psychology_caoslab_pdf_Schneider-2520et-2520al.-5FRSPB-5F2019.pdf&amp;d=DwMDaQ&amp;c=4sF48jRmVAe_CH-k9mXYXEGfSnM3bY53YSKuLUQRxhA&amp;r=TAQHLsQ3QdWAO1nQ9Yo9NlTO9d-Jr_KEGxWlR5koMsFYLrYE9Bswi7JEFqA29aEK&amp;m=C1top5wUEer2j1A4o51Rw9k-Yr3k3TbZC6lH67nfCGE&amp;s=OKpoN_IclMtVN7PtmOpk3Sohs0VJGKWlLHZuWGuAf_w&amp;e=) Supplemental Materials [[pdf]](https://urldefense.proofpoint.com/v2/url?u=https-3A__www.cmu.edu_dietrich_psychology_caoslab_pdf_Schneider-2520et-2520al.-5FRSPB-5F2019-5Fsupp.pdf&amp;d=DwMDaQ&amp;c=4sF48jRmVAe_CH-k9mXYXEGfSnM3bY53YSKuLUQRxhA&amp;r=TAQHLsQ3QdWAO1nQ9Yo9NlTO9d-Jr_KEGxWlR5koMsFYLrYE9Bswi7JEFqA29aEK&amp;m=C1top5wUEer2j1A4o51Rw9k-Yr3k3TbZC6lH67nfCGE&amp;s=mCluoxXuiM05VAbig6_DxlS9OBt6v4ZjQkFgFfJ5g4g&amp;e=)
 					* Busza, A. & Schneider, C. & L. R., Z. & Mahon, B. Z., & Sahin, B. (2019). Using Vision to Study Poststroke Recovery and Test Hypotheses About Neurorehabilitation. *Neurorehabilitation and Neural Repair*, 33(2), 87–95. [[pdf]](https://urldefense.proofpoint.com/v2/url?u=https-3A__www.cmu.edu_dietrich_psychology_caoslab_pdf_Busza-2520et-2520al.-5FNNR-5F2019.pdf&amp;d=DwMDaQ&amp;c=4sF48jRmVAe_CH-k9mXYXEGfSnM3bY53YSKuLUQRxhA&amp;r=TAQHLsQ3QdWAO1nQ9Yo9NlTO9d-Jr_KEGxWlR5koMsFYLrYE9Bswi7JEFqA29aEK&amp;m=C1top5wUEer2j1A4o51Rw9k-Yr3k3TbZC6lH67nfCGE&amp;s=ErNTZeU15foSsNltwEU574RvTRvwpjquSwf1AZU2xA8&amp;e=)
@@ -55,13 +25,20 @@ body.discover
 					* Paul, D.A., Gaffin-Cahn, E., Hintz, E.B., Adeclat, G.J., Zhu, T., Williams, Z.R., Vates, G.E., & Mahon, B.Z. (2014). White matter changes linked to visual recovery after nerve decompression. *Science Translational Medicine, 6,* 1-12. [[pdf]](https://urldefense.proofpoint.com/v2/url?u=https-3A__www.cmu.edu_dietrich_psychology_caoslab_pdf_Paul-2520et-2520al.-5FScience-2520Translational-2520Medicine-5F2014-25282-2529.pdf&amp;d=DwMDaQ&amp;c=4sF48jRmVAe_CH-k9mXYXEGfSnM3bY53YSKuLUQRxhA&amp;r=TAQHLsQ3QdWAO1nQ9Yo9NlTO9d-Jr_KEGxWlR5koMsFYLrYE9Bswi7JEFqA29aEK&amp;m=C1top5wUEer2j1A4o51Rw9k-Yr3k3TbZC6lH67nfCGE&amp;s=XAn1gJChZX2p_Y0L21aNrG7ZclCykVWDEB8zN2EFv7I&amp;e=) Supplemental Materials [[pdf]](https://urldefense.proofpoint.com/v2/url?u=https-3A__www.cmu.edu_dietrich_psychology_caoslab_pdf_Paul-2520et-2520al.-5FScience-2520Translational-2520Medicine-5F2014.pdf&amp;d=DwMDaQ&amp;c=4sF48jRmVAe_CH-k9mXYXEGfSnM3bY53YSKuLUQRxhA&amp;r=TAQHLsQ3QdWAO1nQ9Yo9NlTO9d-Jr_KEGxWlR5koMsFYLrYE9Bswi7JEFqA29aEK&amp;m=C1top5wUEer2j1A4o51Rw9k-Yr3k3TbZC6lH67nfCGE&amp;s=nVouBJ5-9m3vI5Y1TRekf9_zZr_htyCE_sRsqBbygKc&amp;e=)
 					* Stasenko, A., Garcea, F.E., Dombovy, M., & Mahon, B.Z. (2014). When concepts lose their color: A case of object color knowledge impairment. *Cortex, 58,* 217-238. [[pdf]](https://urldefense.proofpoint.com/v2/url?u=https-3A__www.cmu.edu_dietrich_psychology_caoslab_pdf_Stasenko-2520et-2520al.-5FCortex-5F2014.pdf&amp;d=DwMDaQ&amp;c=4sF48jRmVAe_CH-k9mXYXEGfSnM3bY53YSKuLUQRxhA&amp;r=TAQHLsQ3QdWAO1nQ9Yo9NlTO9d-Jr_KEGxWlR5koMsFYLrYE9Bswi7JEFqA29aEK&amp;m=C1top5wUEer2j1A4o51Rw9k-Yr3k3TbZC6lH67nfCGE&amp;s=iaI99cFkHWY0BdoZ9l79BLmFZYtJzzsbizBgD1qXdEA&amp;e=) Supplemental Materials [[pdf]](https://urldefense.proofpoint.com/v2/url?u=https-3A__www.cmu.edu_dietrich_psychology_caoslab_pdf_StasenkoColleagues-5FCortex-5FSupplementalMaterials.pdf&amp;d=DwMDaQ&amp;c=4sF48jRmVAe_CH-k9mXYXEGfSnM3bY53YSKuLUQRxhA&amp;r=TAQHLsQ3QdWAO1nQ9Yo9NlTO9d-Jr_KEGxWlR5koMsFYLrYE9Bswi7JEFqA29aEK&amp;m=C1top5wUEer2j1A4o51Rw9k-Yr3k3TbZC6lH67nfCGE&amp;s=4I6D4vjd8X8PbBDlKz6BB0ecvFehtWR9c1lqEz7ZbRg&amp;e=)
 					* Garcea, F.E., Dombovy, M., & Mahon, B.Z. (2013). Preserved tool knowledge in the context of impaired action knowledge: Implications for models of semantic memory. *Frontiers in Human Neuroscience, 7,* 1-18.
+		section#open-data-sets.open-data-sets-section
+			.container
+				h2 Open Data Sets
+				:markdown
+					* “Survival of Retinal Ganglion Cells After Damage to the Occipital Lobe in Humans is Activity-Dependent” [[Link]](https://kilthub.cmu.edu/articles/Survival_of_Retinal_Ganglion_Cells_After_Damage_to_the_Occipital_Lobe_in_Humans_is_Activity-Dependent/7403780)
+					* “A common neural signature of brain injury in concussion and sub-concussion” [[Link]](https://kilthub.cmu.edu/articles/A_common_neural_signature_of_brain_injury_in_concussion_and_sub-concussion/7964984/1)
+					* “Neural consequences of mTBI” [Coming soon: MRI dataset including 130+ Diffusion Tensor MRI scans of mTBI patients and 90+ healthy controls]
+		section#experimental-stimuli.experimental-stimuli-section
+			.container
+				h2 Experimental Stimuli
+		section#code.code-section
+			.container
+				h2 Code
 
-		section#resources-for-scientists.resources-for-scientists-section
-			.container
-				h1 Resources for Scientists
-		section#data-sets.data-sets-section
-			.container
-				h1 Data Sets
 	
 	+footer()
 			
