--- a/src/scss/partials/_tbi.scss
+++ b/src/scss/partials/_tbi.scss
@@ -2,11 +2,10 @@ $inferno-array: #000004, #160b39, #420a68, #6a176e, #932667, #ba3655, #dd513a,
 	#f3761b, #fca50a, #f6d746, #f6d746;
 $rainbow-array: #6e40aa, #be3caf, #fe4b83, #ff7747, #e3b62f, #b0ef5a, #53f666,
 	#1edfa2, #23acd8, #4c6fdc, #4c6fdc;
-
 $spectral-array: #9e0142, #d13b4b, #f0704a, #fcab63, #fedc8c, #fbf8b0, #e0f3a1,
 	#aadda2, #69bda9, #4288b5, #4288b5;
 
-$color-array: $spectral-array;
+$color-array: $inferno-array;
 
 // Canvas ================================================================================
 .canvas-wrapper {
@@ -89,7 +88,7 @@ $color-array: $spectral-array;
 		display: inline-block;
 		vertical-align: top;
 		width: 15em;
-		margin: var(--large) var(--large) 0 0;
+		margin: var(--medium) var(--medium) 0 0;
 		padding: var(--large);
 		border: thin solid $light_gray;
 		border-radius: var(--radius);
@@ -104,7 +103,6 @@ $color-array: $spectral-array;
 .data-set-run {
 	@extend %no-select;
 	padding: var(--medium) var(--large);
-	background: nth($inferno-array, 10);
 	border: 0;
 	border-radius: var(--radius);
 	font-weight: 600;
@@ -112,23 +110,20 @@ $color-array: $spectral-array;
 	transition: background-color var(--transition);
 
 	&:hover {
-		background: tint(nth($inferno-array, 10), 50%);
 		transition-duration: var(--transition-hover);
 	}
 
 	&:active {
-		background: nth($inferno-array, 8);
 		transition-duration: 0s;
 	}
 
 	.is-running & {
 		&,
 		&:hover {
+			@include gradient(#222, #444);
+			color: rgba($white, 0.5);
 			pointer-events: none;
-			background: mix($black, $white);
-			color: $white;
 		}
-
 		&:after {
 			content: "ning";
 		}
