--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,7 +4,7 @@ include ./partials/_icon
 include ./partials/_footer
 include ./partials/_signup
 
-+head("The Open Brain Project | Discover, Educate, Translate", "The Open Brain Project is a collaborative effort among scientists and clinicians to advance understanding of normal and pathological brain function.")
++head("The Open Brain Project | Discover, Translate, Care", "The Open Brain Project is a collaborative effort among scientists and clinicians to support basic discoveries of brain function that advance patient care.")
 body.home
 	+header("")
 	main
@@ -13,28 +13,35 @@ body.home
 				.link-blocks.main-area-blocks
 					a.link-block.discover-block.orange-gradient(href="/discover")
 						.container
-							h1 Discover
-							p Integrating knowledge from the cognitive and brain sciences to open new frontiers in understanding human brain structure and function.
-							.button
-								| Learn More
+							h1 
+								| Discover
 								+icon("rarr")
-					a.link-block.educate-block.green-gradient(href="/educate")
-						.container
-							h1 Educate
-							p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
-							.button
-								| Learn More
-								+icon("rarr")
+							//- p Opening new frontiers in understanding human brain structure and function.
+							//- .button
+							//- 	| Learn More
+							//- 	+icon("rarr")
 					a.link-block.translate-block.blue-gradient(href="/translate")
 						.container
-							h1 Translate
-							p The Program for Translational Brain Mapping is focused on translating the latest discoveries about human brain function into opportunities to improve patient care.
-							.button
-								| Learn More
+							h1 
+								| Translate
 								+icon("rarr")
+							//- p Turning the latest discoveries about human brain structure and function into better outcomes for patients.
+							//- .button
+							//- 	| Learn More
+							//- 	+icon("rarr")
+					a.link-block.care-block.green-gradient(href="/care")
+						.container
+							h1 
+								| Care
+								+icon("rarr")
+							//- p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
+							//- .button
+							//- 	| Learn More
+							//- 	+icon("rarr")
+
 		section.mission-section
 			.container
-				p The Open Brain Project is a collaborative effort among scientists and clinicians to support basic discoveries of brain function that advance patient care and provide a platform for community education and outreach.			
+				p The Open Brain Project supports basic discoveries of brain function that advance patient care.
 		section.focus-area-section
 			.container
 				h1 Our Focus Areas
@@ -57,7 +64,7 @@ body.home
 								+icon("rarr")
 		section.partners-section
 			.container
-				h1 Partnering Institutions and Programs
+				h1 Collaborating Laboratories by Institution
 			.container
 				.partners-grid
 					a.partner-link(href="https://www.cmu.edu/dietrich/psychology/caoslab/")
@@ -70,13 +77,42 @@ body.home
 						img.partner-img(src="img/partners/beijing_color.png", width="500", height="490", alt="Beijing Normal University")
 					a.partner-link(href="https://cogneuro.psychology.fas.harvard.edu/")
 						img.partner-img(src="img/partners/harvard_color.png", width="500", height="490", alt="Harvard University")
+		section.news-section
+			.container
+				h2 In the News
+				h3 New Research
+				:markdown
+					* [URMC: New Study Reshapes Understanding of How the Brain Recovers from Injury](https://www.urmc.rochester.edu/news/story/5519/new-study-reshapes-understanding-of-how-the-brain-recovers-from-injury.aspx)
+				h3 Preserving Dan's Music Abilities
+				p Learn about Dan, a musician and music teacher, who went through our the Translational Brain Mapping Program to remove his tumor while preserving his music abilities.
+				:markdown
+					* [URMC: A patient plays his saxophone during brain surgery](http://www.urmc.rochester.edu/neurosurgery/news.aspx?start=01-01-2017&amp;end=12-31-2017#newsItem2196)
+					* [NPR Health: This music teacher played his saxophone while in brain surgery](http://www.npr.org/sections/health-shots/2017/08/25/545710598/this-music-teacher-played-his-saxophone-while-in-brain-surgery)
+					* [Democrat and Chronicle: Still on operating table, patient plays sax to show surgery was success](http://www.democratandchronicle.com/story/news/2017/09/02/saxophone-solo-after-brain-surgery-signal-success-rochester/626876001/)
+					* [People Magazine: Music teacher played his sax during brain surgery after surgeons save his music function](http://people.com/bodies/music-teacher-plays-saxophone-during-brain-surgery/)
+					* [Facebook Seeker: This music teacher is undergoing brain surgery while playing the saxophone](http://www.facebook.com/SeekerMedia/videos/10155327361953387/)
+					* [NBC Health News: Musician plays sax during brain tumor surgery](http://www.nbcnews.com/health/health-news/musician-plays-sax-during-brain-tumor-surgery-n796971)
+					* [New Atlas: Mid-surgery sax solo sounds success for retaining musical ability](http://newatlas.com/patient-plays-saxophone-brain-surgery/51094/)
+				h3 Predicting Vision Recovery After Brain Tumor Removal
+				p Understanding vision's recovery process could have implications for many different injuries of the central nervous system.
+				:markdown
+					* [URMC: New imaging technique helps predict how vision recovers after brain tumor removal](http://www.rochester.edu/newscenter/myelin-linked-to-speedy-recovery-of-human-visual-system-after-tumor-removal-82512/)
+					* [Futurity: Images show how brain heals itself after tumor](http://www.futurity.org/pituitary-brain-tumor-vision-817882/)
+					* [WHEC News 10: Greece native defends thesis in cognitive neuroscience 12 years after aneurysm](http://www.whec.com/news/university-of-rochester-medical-center-student-research-scientist/4559749/)
+					* [URMC: Surviving a stroke propels career in brain research](https://www.urmc.rochester.edu/news/story/5107/surviving-a-stroke-propels-career-in-brain-research.aspx)
+					* [URMC: Student work opens the brain to help surgeons remove tumors](http://www.rochester.edu/newscenter/student-work-opens-brain-surgeons-remove-tumors-262152/)
+				h3 Resident and Former SMD Student Wins Cadbury Award
+				p Neurosurgery Resident and Former SMD Student David Paul (M.D. ’16) Wins National Cadbury Award for Academic and Volunteer Achievements.
+				:markdown
+					* [Pilot research offers new insights about how the brain fixes itself](https://www.urmc.rochester.edu/news/story/4450/smd-student-david-paul-m.d.-16-wins-national-cadbury-award--for-academic-and-volunteer-achievements.aspx)
 		section.videos-section
 			.container
 				h1 Featured Videos
+				p Translating the latest discoveries in human neuroscience into the best care for patients.
 			.wrapper.videos-list
 				for video in videos
-					a.video-block(href="https://www.youtube.com/watch?v=" + video.id)
-						.video-thumbnail(style="background-image: url(https://i.ytimg.com/vi/" + video.id + "/sddefault.jpg)")
+					a.video-block(href="https://www.youtube.com/watch?v=" + video.video_url)
+						.video-thumbnail(style="background-image: url(" + video.thumbnail_src + ")")
 							.icon-youtube-wrapper
 								+icon("youtube")
 						h4.video-title= video.title
