--- a/src/jade/translate/index.jade
+++ b/src/jade/translate/index.jade
@@ -4,16 +4,18 @@ include ../partials/_svg
 include ../partials/_icon
 include ../partials/_footer
 
-+head("Translate | The Open Brain Project", "The Program for Translational Brain Mapping is focused on translating the latest discoveries about human brain function into opportunities to improve patient care.")
-body.discover
++head("Translate | The Open Brain Project", "Turning the latest discoveries about human brain structure and function into better outcomes for patients.")
+body.translate
 	+header()
 	main
 		section.page-hero.blue-gradient
-			.container.split
-				h2 Translate
-				p.stretch The Program for Translational Brain Mapping is focused on translating the latest discoveries about human brain function into opportunities to improve patient care.
-		section.translational-brain-mapping-section
 			.container
-				a(href="https://www.urmc.rochester.edu/del-monte-neuroscience/translational-brain-mapping.aspx") Program for Translational Brain Mapping
-				
+				h1 Translate
+				p Turning the latest discoveries about human brain structure and function into better outcomes for patients.
+		.wrapper.videos-list
+			a.video-block(href="https://www.youtube.com/watch?v=tgZrbLlK6IM")
+				.video-thumbnail(style="background-image: url(https://i.ytimg.com/vi/tgZrbLlK6IM/sddefault.jpg)")
+					.icon-youtube-wrapper
+						+icon("youtube")
+				h4.video-title The mission of the Program for Translational Brain Mapping
 	+footer()
